# PrimaryStudyBuddyAI

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
.cursor/: hooks.json
.cursor/hooks/: guard_edit.py  guard_shell.py
.cursor/rules/: ai-provider.mdc  project-guide.mdc  prompts.mdc  state-machine.mdc
.github/workflows/: ci.yml
docs/: AUTONOMY_RULES.md  MILESTONES.md  PROJECT_MAP.md  VOICE_ARCH.md  plan.md  semantic-vad-flow.html
scripts/: lint_invariants.py
src/studybuddy/: __init__.py  __main__.py  server.py
src/studybuddy/ai/: base.py  gemini_live.py  volcano_provider.py
src/studybuddy/client/web/: index.html  report.html  study.html
src/studybuddy/config/: settings.py
src/studybuddy/config/profiles/: default.yaml
src/studybuddy/monitor/: behavior_analyzer.py
src/studybuddy/orchestrator/: engine.py  state_machine.py  timer.py
src/studybuddy/planner/: homework_parser.py  schedule_generator.py
src/studybuddy/prompts/: break_time.md  nudge_templates.md  report_summary.md  studying_monitor.md  system_persona.md  task_briefing.md
src/studybuddy/reporter/: parent_notifier.py  report_generator.py  session_logger.py
tests/: conftest.py  test_homework_parser.py  test_schedule_generator.py  test_state_machine.py
